fail_crate/tests/const_and_into.stderr
error: `into` cannot be used in constant constructors.
 --> fail_crate/tests/const_and_into.rs:7:5
  |
7 |     x: u32
  |     ^
