fail_crate/tests/const_and_into.rs
use inew::New;

#[derive(New)]
#[new(const)]
struct A {
    #[new(into)]
    x: u32
}

fn main() {}
